--- a/.github/workflows/dockerfile-push.yml
+++ b/.github/workflows/dockerfile-push.yml
@@ -1,31 +1,31 @@
-name: Dockerfile Push
+# name: Dockerfile Push
 
-on:
-  schedule:
-    # run at everyday at 00:00 UTC
-    - cron:  '0 0 * * *'
-  workflow_dispatch:
+# on:
+#   schedule:
+#     # run at everyday at 00:00 UTC
+#     - cron:  '0 0 * * *'
+#   workflow_dispatch:
 
-jobs:
+# jobs:
 
-  build:
+#   build:
 
-    runs-on: ubuntu-20.04
+#     runs-on: ubuntu-20.04
 
-    steps:
-    -
-      name: Checkout 🛎 Ivy
-      uses: actions/checkout@v3
+#     steps:
+#     -
+#       name: Checkout 🛎 Ivy
+#       uses: actions/checkout@v3
 
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     -
+#       name: Login to Docker Hub
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 
-    - name: Build and push Dockerfile
-      run: |
-        docker build . --file docker/Dockerfile --tag unifyai/ivy:latest
-        docker push unifyai/ivy:latest
+#     - name: Build and push Dockerfile
+#       run: |
+#         docker build . --file docker/Dockerfile --tag unifyai/ivy:latest
+#         docker push unifyai/ivy:latest
